--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,1 @@
-/UI/
-/ai/
-/buildings/
-/decor/
-/entity/
-/environment/
-/food/
-/main/
-/map/
-/maps/
-/module-info.class
-/net/
-/npcs/
-/player/
-/tiles/
-/utility/
+/.DS_Store
