Began adding saves and data saving

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,18 @@
+/.DS_Store
+/UI/
+/ai/
+/buildings/
 /decor/
 /entity/
+/environment/
+/food/
+/gson-2.11.0.jar
+/main/
 /map/
-/utility/
 /maps/
+/net/
 /npcs/
+/player/
+/save/
+/tiles/
+/utility/
