--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
+	<classpathentry kind="lib" path="src/gson-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
