--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,17 @@
-/utility/
-/main/
-/entity/
-/map/
-/player/
-/maps/
+/.DS_Store
+/UI/
+/ai/
+/buildings/
 /decor/
+/entity/
+/environment/
+/food/
+/gson-2.11.0.jar
+/main/
+/map/
+/maps/
+/net/
+/npcs/
+/player/
+/tiles/
+/utility/
