--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-18">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="src/gson-2.11.0.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
@@ -183,5 +178,6 @@
 	<classpathentry kind="lib" path="/Users/josswingfield/Desktop/LWJGL/lwjgl-release-3.3.6-custom/lwjgl-zstd-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/josswingfield/Desktop/LWJGL/lwjgl-release-3.3.6-custom/lwjgl-zstd.jar"/>
 	<classpathentry kind="lib" path="/Users/josswingfield/Desktop/LWJGL/lwjgl-release-3.3.6-custom/lwjgl.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/OpenJDK 18.0.2.1 [18.0.2.1]"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
